--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "main": "node_modules/expo/AppEntry.js",
-  "homepage": "http://jamesclarkefp.github.io/Native-Simple-Notes",
+  "homepage": "http://jamesclarkefp.github.io/Simple-Notes-Native",
   "scripts": {
     "deploy": "gh-pages -d web-build",
     "predeploy": "expo build:web",
